DIT-204: Avmelding. - Fixed centering of modal box - Fixed backdrop not covering entire screen (both mobile and desktop)

--- a/src/vue/design/override-base-Canvas-elements.scss
+++ b/src/vue/design/override-base-Canvas-elements.scss
@@ -5,6 +5,9 @@
   width: fit-content !important;
   position: relative !important;
 }
+.ui-widget-overlay {
+  position: fixed !important;
+}
 
 #left-side {
   width: fit-content !important;
